fixed icons and images not showing with ejs

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,91 +4,5 @@ body {
   align-items: center;
   min-height: 100vh;
 
-  background: url(../img/pexels-content-pixie-2736499.jpg);
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
-}
-
-ul {
-  font-size: 2rem;
-}
-
-li {
-  list-style: none;
-  padding-right: 3rem;
-  padding-bottom: 3rem;
-}
-.todo-head {
-  min-height: 5vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-.todo-head h3 {
-  padding: 1rem;
-}
-
-form input,
-form button {
-  padding: 0.5rem;
-  font-size: 2rem;
-  border: none;
-  background: white;
-}
-form button {
-  color: #4763ff;
-  background: #f7fffe;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-form button:hover {
-  background: #ff6f47;
-  color: white;
-}
-
-.tasks {
-  width: 90%;
-  margin: auto;
-  display: flex;
-  min-height: 70vh;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.task-card {
-  text-align: center;
-  flex: 1 1 25rem;
-  min-height: 40vh;
-  margin: 2rem 5rem;
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1), 0px 20px 20px rgba(0, 0, 0, 0.1);
-}
-
-.tasks img {
-  max-width: 15%;
-  margin: 2rem;
-}
-
-.task-card h4,
-.task-card p {
-  font-size: 2rem;
-  padding: 1rem;
-  line-height: 1;
-}
-
-.card-icon {
-  background: #27394e;
+  background: url(/img/pexels-content-pixie-2736499.jpg);
 }
